Added command line arguments - Modified ConnectToMongoDB to support TLS, and URL and database name as arguments. - Added command line argument: db_url, db_name and host with default values. See descriptions.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cetracker",
-  "version": "0.1.4",
+  "version": "0.1.1",
   "description": "Cryptocurrency Exchanges Tracker",
   "main": "run_tracker.mjs",
   "author": "Artiom Baloian",
@@ -16,6 +16,7 @@
     "mongodb": "^3.3.4",
     "request": "^2.88.0",
     "signalr-client": "0.0.19",
+    "stdio": "^2.0.1",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
