Code cleanup and changed quoted properties to unquoted properties.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,6 @@
         "camelcase": "off",
         "import/extensions": "off",
         "no-multiple-empty-lines": ["error", { "max": 3, "maxEOF": 1 }],
-        "quote-props": ["error", "always"],
         "comma-dangle": "off",
         "no-new-object": "error",
         "no-plusplus": "off",
@@ -30,6 +29,7 @@
         "dot-notation": "off",
         "no-param-reassign": "off",
         "no-await-in-loop": "off",
+        "no-underscore-dangle": "off",
         "no-restricted-globals": "off",
         "operator-linebreak": ["error", "after"],
         "no-constant-condition": ["error", { "checkLoops": false }],
