--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "async": "^3.1.0",
-    "coinbase-pro": "^0.9.0",
+    "coinbase-pro-node": "^1.4.2",
     "jsonic": "^0.3.1",
     "mongodb": "^3.3.4",
     "request": "^2.88.0",
