--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cetracker",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "Cryptocurrency Exchanges Tracker",
   "main": "run_tracker.mjs",
   "author": "Artiom Baloian",
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "async": "^3.1.0",
-    "coinbase-pro-node": "^1.6.1",
+    "axios": "^0.19.2",
+    "coinbase-pro-node": "^2.1.0",
     "jsonic": "^0.3.1",
-    "mongodb": "^3.3.4",
-    "request": "^2.88.0",
-    "signalr-client": "0.0.19",
+    "mongodb": "^3.5.6",
+    "signalr-client": "0.0.20",
     "stdio": "^2.0.1",
     "ws": "^7.2.1",
     "zlib": "^1.0.5"
